[gd_scene load_steps=4 format=3 uid="uid://d2oe85ngciha4"]

[ext_resource type="Script" path="res://utility/NoteSlotsControl/noteslotscontrol.gd" id="1_kt03k"]
[ext_resource type="PackedScene" uid="uid://b6rfaks1j5nx3" path="res://utility/NoteSlotsControl/note_effect.tscn" id="2_igvwe"]
[ext_resource type="Texture2D" uid="uid://b6x2sa0qrnulc" path="res://utility/NoteSlotsControl/Noteslot.png" id="3_tv68q"]

[node name="NoteSlots" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_kt03k")

[node name="NoteEffect" parent="." instance=ExtResource("2_igvwe")]
visible = false
metadata/NoteType = ""

[node name="Slot1" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(100, 100)
texture = ExtResource("3_tv68q")

[node name="Slot2" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(185, 100)
texture = ExtResource("3_tv68q")

[node name="Slot3" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(270, 100)
texture = ExtResource("3_tv68q")

[node name="Slot4" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(355, 100)
texture = ExtResource("3_tv68q")

[node name="Slot5" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(440, 100)
texture = ExtResource("3_tv68q")

[node name="Slot6" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(525, 100)
texture = ExtResource("3_tv68q")

[node name="Slot7" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(610, 100)
texture = ExtResource("3_tv68q")
